--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -17,8 +17,8 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [class.active]="currentPage === 'vehicle'" routerLink="vehicle/list"
-           (click)="setActivePage('vehicle')">
+        <a class="nav-link" [class.active]="currentPage === 'vehicle/list'" routerLink="vehicle/list"
+           (click)="setActivePage('vehicle/list')">
           <i class="bi bi-car-front  me-2"></i>
           <span>Gestion Vehicule</span>
         </a>
