--- a/src/app/admin/components/consumption-report-form/consumption-report-form.component.css
+++ b/src/app/admin/components/consumption-report-form/consumption-report-form.component.css
@@ -21,3 +21,7 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
+button.example-custom-date-class {
+  background: orange;
+  border-radius: 100%;
+}
